calc price& add produce.html

--- a/FrontEnd/css/home.css
+++ b/FrontEnd/css/home.css
@@ -112,3 +112,34 @@
     transform: scale(1.1);
     cursor: pointer;
 }
+.to-cart{
+    position: absolute;
+    left:78%;
+    top:50%;
+    width:120px;
+    height:40px;
+    transform: translateY(-50%);
+    background-color: white;
+    font-weight:800;
+    color:red;
+    font-size:16px;
+    text-align: center;
+    line-height:40px;
+    box-shadow:0 0 1px 2px red;
+}
+.to-cart::before{
+    content:attr(data-count);
+    display: block;
+    position: absolute;
+    width:20px;
+    height:20px;
+    border-radius: 100%;
+    background-color:teal;
+    left:100px;
+    line-height:20px;
+    font-size:12px;
+    /* scale: 0.5; */
+    transform: scale(1.2);
+    color:black
+    
+}
