--- a/FrontEnd/css/cart.css
+++ b/FrontEnd/css/cart.css
@@ -24,3 +24,181 @@
     font-weight: 500;
     color:red;
 }
+.cart{
+    position: relative;
+    width:1000px;
+    left:50%;
+    transform: translateX(-50%);
+}
+.cart-filter{    
+}
+.cart-filter-bar{
+    font-size: large;
+    font-weight:500;
+    letter-spacing:0.1em;
+    margin:10px 0;
+    background-color: rgb(240, 218, 190);
+    padding:10px 0;
+    
+}
+.cart-filter-bar>a{
+    color:red;
+}
+.cart-warp{
+    padding-top:20px;
+    background-color: rgb(219, 216, 211);
+}
+.cart-wrap-top{
+    display:flex;
+}
+.cart-wrap-item{
+    margin:10px 0;
+    background-color: bisque;
+}
+.cart-wrap-item-select{
+    margin-right:50px;
+}
+.cart-wrap-top>div{
+    text-align:right;
+    flex:1 1;
+}
+
+.good-operate{
+    
+    padding:0 20px;
+}
+.cart-wrap-itemlist{
+    
+    margin:10px 0;
+    height:118px;
+}
+.cart-wrap-item{
+    height:100px;
+    display:flex;
+    position: relative;
+    top:18px;
+    
+}
+.car-wrap-item>button{
+    outline: none;
+    padding:0;
+}
+.cart-wrap-item-inp{
+    margin:20px 0 0 10px;
+    outline: none;
+    padding:0;
+}
+.good-img-small{
+    width:72px;
+    height:72px;
+    background-color: yellowgreen;
+    margin:0 20px;
+    
+}
+.good-item{
+    width:160px;
+    height:100%;
+    font-size: small;
+}
+.good-item>a{
+    /* 在下面设置盒子无用 */
+    display: -webkit-box;
+    margin-top:10px;
+    
+}
+.good-item-server{
+    color:gray;
+    padding:0 5px;
+}
+.good-item-state{
+    width: 100%;
+    word-break: break-all;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+    overflow: hidden;
+    
+    /* text-overflow: ellipsis; */
+}
+.good-description{
+    width:128px;
+    text-align: center;
+}
+.good-per-price{
+    
+    position:relative;
+    left:30px;
+    width:100px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+.good-per-price>span{
+    text-align: center;
+}
+.good-count{
+    position:relative;
+    left:40px;
+    width:180px;
+    height:100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.good-count-input{
+    width:60px;
+    margin:0;
+    text-align: center;
+}
+.good_price_count{
+    width:180px;
+    height:100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.good-item-operate{
+    position:relative;
+}
+.good-item-operate>a{
+    position: relative;
+    top:20px;
+    left:25px;
+    display:block;
+    font-size: small;
+    margin-top:5px;
+}
+.cart-summary{
+    margin-top:100px;
+    width:100%;
+    height:64px;
+    background-color: antiquewhite;
+    
+}
+.cart-summary>div{
+    float:right;    
+}
+.cart-summary>div>div{
+    display:inline-block;
+    margin-left:10px;
+    height:100%;
+    line-height:64px;
+}
+.cart-balance{
+    display: inline-block;
+    height:64px;
+    width:72px;
+    background-color: red;
+    outline: none;
+    user-select: none;
+    cursor: pointer;
+    text-align: center;
+    color:white;
+    font-weight: bold;
+}
+.cart-summary-count{
+    color:red;
+}
+.cart-summary-price{
+    color:red;
+    font-size:large;
+}
